[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says="0.2"
random-string='1.0.0'
lazy_static='1.0.0'
chrono='0.4'
num='0.4.0'
strum = "0.24"
strum_macros = "0.24"